--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header>
-        <h1><strong>Axel</strong> Capital</h1>
+        <h1>Axel Capital</h1>
     </header>
     <main>
         <img src="img/axel-capital-hero.jpg" alt="axel-capital">
-        <h3><strong>Axel Capital dedicates to <br>propelling visionary </strong>startups <br><strong>into the future.</h3>
-    </main></b>
+        <h3><startups>Axel Capital dedicates to <br>propelling visionary <i>startups</i> <br>into the future.</h3>
+    </main>
     
 </body>
 </html>
