--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     </header>
     <main>
         <img src="img/axel-capital-hero.jpg" alt="axel-capital">
-        <h3><startups>Axel Capital dedicates to <br>propelling visionary <i>startups</i> <br>into the future.</h3>
+        <h3>Axel Capital dedicates to <br>propelling visionary startups <br>into the future.</h3>
     </main>
-    
 </body>
 </html>
