jeg har lavet css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Axel Capital</h1>
+        <h1>Alex<span>Capital</span></h1>
     </header>
     <main>
         <img src="img/axel-capital-hero.jpg" alt="axel-capital">
-        <h3>Axel Capital dedicates to <br>propelling visionary startups <br>into the future.</h3>
+        <footer>
+            <h3>Axel Capital dedicates to <br>propelling visionary startups <br>into the future.</h3>
+        </footer>
+       
     </main>
 </body>
 </html>
